# linux-oneplus-tristatekey

./: .gitignore  60-gpiod.rules  APKBUILD  README.md  perrone.michele@outlook.com-6139e12f.rsa.pub  tristatekey-daemon.confd  tristatekey-daemon.initd  tristatekey-daemon.post-install  tristatekey-daemon.pre-install  tristatekey-root-daemon.initd  tristatekey-user-daemon.desktop
tristatekey-daemon/: CMakeLists.txt  main.c  tristatekey-root-daemon.c  tristatekey-user-daemon.c
tristatekey-root-daemon/: CMakeLists.txt  main.c
tristatekey-user-daemon/: CMakeLists.txt  main.c
